RESOLVED FIXED304158
Digital Credentials: ignore unknown digital credential types
https://bugs.webkit.org/show_bug.cgi?id=304158
Summary Digital Credentials: ignore unknown digital credential types
Marcos Caceres
Reported 2025-12-14 20:38:49 PST
WebKit currently relies on the IdentityCredentialProtocol.idl enum to prevent requests with unknown protocols being passed to the OS. Instead, we should filter out unknown protocols, per spec: https://github.com/w3c-fedid/digital-credentials/pull/372
Attachments
Radar WebKit Bug Importer
Comment 1 2025-12-16 21:23:16 PST
Marcos Caceres
Comment 2 2025-12-16 21:23:34 PST
Marcos Caceres
Comment 3 2025-12-17 19:11:55 PST
EWS
Comment 4 2026-01-07 22:51:33 PST
Committed 305257@main (b2e1c1159b00): <https://commits.webkit.org/305257@main> Reviewed commits have been landed. Closing PR #55603 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.